--- a/progressiveautomation/lang/es_ES.lang
+++ b/progressiveautomation/lang/es_ES.lang
@@ -1,65 +1,65 @@
 itemGroup.PATab=Automatización Progresiva
 
-tile.miner.name=Minero de Madera
-tile.miner_stone.name=Minera de Piedra
-tile.miner_iron.name=Minero de Hierro
-tile.miner_diamond.name=Minero de Diamante
-tile.chopper.name=Cortador de Madera
-tile.chopper_stone.name=Cortador de Piedra
-tile.chopper_iron.name=Cortador de Hierro
-tile.chopper_diamond.name=Cortador de Diamante
-tile.planter.name=Sembradora de Madera
-tile.planter_stone.name=Sembradora de Piedra
-tile.planter_iron.name=Sembradora de Hierro
-tile.planter_diamond.name=Sembradora de Diamante
-tile.generator.name=Generador de Madera
-tile.generator_stone.name=Generador de Piedra
-tile.generator_iron.name=Generador de Hierro
-tile.generator_diamond.name=Generador de Diamante
-tile.crafter.name=Fabricante de Madera
-tile.crafter_stone.name=Fabricante de Piedra
-tile.crafter_iron.name=Fabricante de Hierro
-tile.crafter_diamond.name=Fabricante de Diamante
-tile.farmer.name=Agricultor de Animales de Madera
-tile.farmer_stone.name=Agricultor de Animales de Piedra
-tile.farmer_iron.name=Agricultor de Animales de Hierro
-tile.farmer_diamond.name=Agricultor de Animales de Diamante
-tile.killer.name=Matador de Madera
-tile.killer_stone.name=Matador de Piedra
-tile.killer_iron.name=Matador de Hierro
-tile.killer_diamond.name=Matador de Diamante
-tile.capacitor.name=Condensador de Madera
-tile.capacitor_stone.name=Condensador de Piedra
-tile.capacitor_iron.name=Condensador de Hierro
-tile.capacitor_diamond.name=Condensador de Diamante
+tile.Miner.name=Minero de Madera
+tile.MinerStone.name=Minera de Piedra
+tile.MinerIron.name=Minero de Hierro
+tile.MinerDiamond.name=Minero de Diamante
+tile.Chopper.name=Cortador de Madera
+tile.ChopperStone.name=Cortador de Piedra
+tile.ChopperIron.name=Cortador de Hierro
+tile.ChopperDiamond.name=Cortador de Diamante
+tile.Planter.name=Sembradora de Madera
+tile.PlanterStone.name=Sembradora de Piedra
+tile.PlanterIron.name=Sembradora de Hierro
+tile.PlanterDiamond.name=Sembradora de Diamante
+tile.Generator.name=Generador de Madera
+tile.GeneratorStone.name=Generador de Piedra
+tile.GeneratorIron.name=Generador de Hierro
+tile.GeneratorDiamond.name=Generador de Diamante
+tile.Crafter.name=Fabricante de Madera
+tile.CrafterStone.name=Fabricante de Piedra
+tile.CrafterIron.name=Fabricante de Hierro
+tile.CrafterDiamond.name=Fabricante de Diamante
+tile.Farmer.name=Agricultor de Animales de Madera
+tile.FarmerStone.name=Agricultor de Animales de Piedra
+tile.FarmerIron.name=Agricultor de Animales de Hierro
+tile.FarmerDiamond.name=Agricultor de Animales de Diamante
+tile.Killer.name=Matador de Madera
+tile.KillerStone.name=Matador de Piedra
+tile.KillerIron.name=Matador de Hierro
+tile.KillerDiamond.name=Matador de Diamante
+tile.Capacitor.name=Condensador de Madera
+tile.CapacitorStone.name=Condensador de Piedra
+tile.CapacitorIron.name=Condensador de Hierro
+tile.CapacitorDiamond.name=Condensador de Diamante
 
-item.wrench.name=Llave PA
-item.manual.name=Manual de Automatización Progresiva
-item.rf_engine.name=Motor de RF
-item.creative_rf_engine.name=Motor Creativo de RF
-item.wood_upgrade.name=Mejora de Madera
-item.stone_upgrade.name=Mejora de Piedra
-item.iron_upgrade.name=Mejora de Hierro
-item.diamond_upgrade.name=Mejora de Diamante
-item.cobble_upgrade.name=Mejora de Generador de Roca
-item.wither_upgrade.name=Mejora de Wither
-item.filler_upgrade.name=Mejora de Relleno
+item.Wrench.name=Llave PA
+item.Manual.name=Manual de Automatización Progresiva
+item.RFEngine.name=Motor de RF
+item.CreativeRFEngine.name=Motor Creativo de RF
+item.WoodUpgrade.name=Mejora de Madera
+item.StoneUpgrade.name=Mejora de Piedra
+item.IronUpgrade.name=Mejora de Hierro
+item.DiamondUpgrade.name=Mejora de Diamante
+item.CobbleUpgrade.name=Mejora de Generador de Roca
+item.WitherUpgrade.name=Mejora de Wither
+item.FillerUpgrade.name=Mejora de Relleno
 
-item.filter_adult_upgrade.name=Mejora de Filtro para Adultos
-item.filter_animal_upgrade.name=Mejora de Filtro para Animales
-item.filter_mob_upgrade.name=Mejora de Filtro para Criaturas
-item.filter_player_upgrade.name=Mejora de Filtro para Jugadores
+item.FilterAdultUpgrade.name=Mejora de Filtro para Adultos
+item.FilterAnimalUpgrade.name=Mejora de Filtro para Animales
+item.FilterMobUpgrade.name=Mejora de Filtro para Criaturas
+item.FilterPlayerUpgrade.name=Mejora de Filtro para Jugadores
 
-item.shearing_upgrade.name=Mejora de Cizallamiento
-item.milker_upgrade.name=Mejora de Ordiñador
+item.ShearingUpgrade.name=Mejora de Cizallamiento
+item.MilkerUpgrade.name=Mejora de Ordiñador
 
-item.coal_pellet.name=Pastilla de Combustible
+item.CoalPellet.name=Pastilla de Combustible
 
-item.wither_wood.name=Madera de Wither
-item.wither_stone.name=Piedra de Wither
-item.wither_gold.name=Oro de Wither
-item.wither_iron.name=Hierro de Wither
-item.wither_diamond.name=Diamante de Wither
+item.WitherWood.name=Madera de Wither
+item.WitherStone.name=Piedra de Wither
+item.WitherGold.name=Oro de Wither
+item.WitherIron.name=Hierro de Wither
+item.WitherDiamond.name=Diamante de Wither
 
 gui.miner=Minero
 gui.crafter=Fabricante Automático
